changed ArrayList<Coordinate> nexts to MyDeque<Coordinate> nexts (changed type to deque instead of using a frontier class cuz for some reason that gives errors)